--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,9 +15,7 @@
     <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
+    <%= f.button :submit, "Update", class: "btn btn-large btn-primary" %>
 <% end %>
 
 <h3>Cancel my account</h3>
