--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,9 +9,5 @@
     <%= f.input :password_confirmation, :required => true %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
+    <%= f.button :submit, "Sign up", class: "btn btn-large btn-primary" %>
 <% end %>
-
-<%= render "devise/shared/links" %>
